--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <activity
             android:name=".feature.chat.ui.ChatActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -33,7 +33,7 @@
 
         <activity
             android:name=".SplashActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:noHistory="true"
             android:screenOrientation="portrait"
@@ -87,7 +87,7 @@
         </activity>
         <activity
             android:name=".feature.loggedin.ui.LoggedInActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -95,7 +95,7 @@
 
         <activity
             android:name=".feature.profile.ui.charity.CharityActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -103,7 +103,7 @@
 
         <activity
             android:name=".feature.profile.ui.feedback.FeedbackActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -111,7 +111,7 @@
 
         <activity
             android:name=".feature.profile.ui.myinfo.MyInfoActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -119,7 +119,7 @@
 
         <activity
             android:name=".feature.profile.ui.payment.PaymentActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -127,7 +127,7 @@
 
         <activity
             android:name=".feature.profile.ui.payment.PaymentHistoryActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -135,7 +135,7 @@
 
         <activity
             android:name=".feature.profile.ui.payment.TrustlyActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -143,7 +143,7 @@
 
         <activity
             android:name=".feature.profile.ui.myhome.MyHomeActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -151,7 +151,7 @@
 
         <activity
             android:name=".feature.profile.ui.coinsured.CoinsuredActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -159,7 +159,7 @@
 
         <activity
             android:name=".feature.profile.ui.aboutapp.AboutAppActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -167,7 +167,7 @@
 
         <activity
             android:name=".feature.profile.ui.aboutapp.LicensesActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -175,7 +175,7 @@
 
         <activity
             android:name=".feature.claims.ui.commonclaim.CommonClaimActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -183,7 +183,7 @@
 
         <activity
             android:name=".feature.claims.ui.commonclaim.EmergencyActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -191,21 +191,21 @@
 
         <activity
             android:name=".feature.marketing.ui.MarketingActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme.Marketing"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".feature.offer.OfferActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme.Offer"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".feature.referrals.ReferralsReceiverActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:noHistory="true"
             android:screenOrientation="portrait"
@@ -213,7 +213,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".feature.referrals.ReferralsSuccessfulInviteActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:noHistory="true"
             android:parentActivityName=".SplashActivity"
@@ -223,7 +223,7 @@
 
         <activity
             android:name=".LoggedInTerminatedActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -231,7 +231,7 @@
 
         <activity
             android:name=".feature.settings.SettingsActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
@@ -239,7 +239,7 @@
 
         <activity
             android:name=".feature.language.LanguageSelectionActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
