--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
     implementation "androidx.preference:preference-ktx:1.1.0"
+    implementation "androidx.core:core-ktx:1.1.0"
 
     // Android lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
