--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,10 @@ dependencies {
     // ZXing
     implementation 'com.google.zxing:core:3.4.0'
 
+    // airbnb paris
+    implementation 'com.airbnb.android:paris:1.3.1'
+    kapt 'com.airbnb.android:paris-processor:1.3.1'
+
     // test
     testImplementation 'junit:junit:4.12'
 
