Create Key Gear Item Screen: Take Photos
This implementation lacks backend integration
as there is no backend to integrate to right now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -253,7 +253,7 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity
-            android:name=".feature.keygear.CreateKeyGearItemActivity"
+            android:name=".feature.keygear.ui.createitem.CreateKeyGearItemActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
