--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -265,7 +265,7 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/Hedvig.Theme.Transparent"
+            android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
 
         <meta-data
