Add illustrations as fallback when no photo exists.
This had major implications for the shared element transitions, and as such there's a lot of code around it!

Bonus: Update LeakCanary

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -193,7 +193,7 @@ dependencies {
     // test
     testImplementation 'junit:junit:4.12'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
