The mother of all refactors.
Switch to kotlin codegen,
and also fix basically all warnings in the process. Woohoo!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.apollographql.apollo'
 
 apollo {
-    useJavaBeansSemanticNaming = true
-    generateModelBuilder = true
+    generateKotlinModels = true
     customTypeMapping = [
             "URL"      : "java.lang.String",
             "LocalDate": "org.threeten.bp.LocalDate",
