--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,8 @@ apollo {
             "LocalDate"             : "org.threeten.bp.LocalDate",
             "Upload"                : "com.apollographql.apollo.api.FileUpload",
             "PaymentMethodsResponse": "com.adyen.checkout.base.model.PaymentMethodsApiResponse",
-            "PaymentsResponse"      : "org.json.JSONObject"
+            "PaymentsResponse"      : "org.json.JSONObject",
+            "CheckoutPaymentsAction": "kotlin.String"
     ]
 }
 
