--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ org.gradle.jvmargs=-Xmx9216M -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 org.gradle.configureondemand=false
 android.useAndroidX=true
 android.enableJetifier=true
+com.apollographql.apollo.endpoint=https://graphql.dev.hedvigit.com/graphql
+com.apollographql.apollo.schema=src/main/graphql/com/hedvig/android/owldroid/schema.json
