--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.71'
+        kotlin_version = '1.3.72'
         apollo_version = '1.3.3'
     }
 
@@ -38,6 +38,9 @@ allprojects {
         }
         maven {
             url 'https://jitpack.io'
+        }
+        maven {
+            url 'https://dl.bintray.com/hedvig/hedvig-java'
         }
     }
 }
