Revert "Merge pull request #193 from HedvigInsurance/feature/lokalise"
This reverts commit 4b3fa4060326a3e50fd6551f25d307c1a1eaf38c, reversing
changes made to c76053613b8a7a25a3aeac4650bbd7c0ff652016.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.apollographql.apollo'
-apply plugin: 'com.likandr.lokalise'
 
 apollo {
     generateKotlinModels = true
@@ -231,11 +230,10 @@ textkeys {
     excludedLanguages = rootProject.ext.excludedLanguages
 }
 
-def lokaliseProperties = new Properties()
-lokaliseProperties.load(new FileInputStream(rootProject.file("lokalise.properties")))
+// TODO: Remove this task once everything is merged to develop
+task updateSchema(type: Exec) {
+    group = 'GraphQL'
+    description = 'Fetches the latest schema from our dev GraphQL-server'
 
-lokalise {
-    id lokaliseProperties['id']
-    token lokaliseProperties['token']
+    commandLine 'apollo', 'schema:download', '--endpoint=https://graphql.dev.hedvigit.com/graphql', "$projectDir/src/main/graphql/com/hedvig/android/owldroid/schema.json"
 }
-
